BUG #7815

Changes per serg to http://lists.mysql.com/internals/30281

Re-enabled --delayed-insert